# kutecam

./: .gitignore  CMakeLists.txt  License.txt  README.md  kuteCAM.qrc
i18n/: kuteCAM_de.ts  kuteCAM_en.ts
sample/: Interface.cmake  Niederzug-80-Body01.brep  Niederzug-80-Body02.brep  Tools.xml
src/: CMakeLists.txt  DrillCycle.h  GCodeEditor.ui  Geom_HelixData.cpp  Geom_HelixData.h  HHelixCurveAdaptor.cpp  HHelixCurveAdaptor.h  HelixCurveAdaptor.cpp  HelixCurveAdaptor.h  HelixCurveAdaptor_CylinderEvaluator.cpp  HelixCurveAdaptor_CylinderEvaluator.h  HelixCurveAdaptor_p.h  PointInPolygon.h  aboutdialog.cpp  aboutdialog.h  applicationwindow.cpp  applicationwindow.h  cctargetdefinition.cpp  cctargetdefinition.h  cfgGCode.ui  cfgGeneral.ui  cfgMat.ui  cfgVise.ui  cfggcode.cpp  cfggcode.h  cfggeneral.cpp  cfggeneral.h  cfgmaterial.cpp  cfgmaterial.h  cfgvise.cpp  cfgvise.h  clip.ui  clipdialog.cpp  clipdialog.h  configpage.cpp  configpage.h  contourtargetdefinition.cpp  contourtargetdefinition.h  core.cpp  core.h  (+160 more)
src/PPLib/: CMakeLists.txt  abstractpostprocessor.cpp  abstractpostprocessor.h  cuttingparameters.h  dinpostprocessor.cpp  dinpostprocessor.h  postprocessor.h  toolentry.cpp  toolentry.h
src/pp/: CMakeLists.txt
src/pp/Sinumeric_840D/: CMakeLists.txt  ppSinumeric840D.cpp  ppSinumeric840D.h
src/pp/fanuc/: CMakeLists.txt  ppfanuc.cpp  ppfanuc.h
src/pp/heidenhain/: CMakeLists.txt  ppheidenhain.cpp  ppheidenhain.h
src/pp/include/: postprocessor.h
